Refatora serviços e regras de negocios